--- a/MyProject/templates/auth/profile_edit.html
+++ b/MyProject/templates/auth/profile_edit.html
@@ -20,6 +20,10 @@
             <label for="last_name" class="form-label">Numer Telefonu</label>
             {{ form.phone }}
         </div>
+        <div class="mb-3">
+            <label for="region" class="form-label">Województwo</label>
+            {{ form.region }}
+        </div>
         <button type="submit" class="btn btn-primary">Zapisz</button>
     </form>
 {% endblock %}
