--- a/MyProject/templates/pet/add_pet.html
+++ b/MyProject/templates/pet/add_pet.html
@@ -16,8 +16,16 @@
             {{ form.pet_num }}
         </div>
         <div class="mb-3">
+            <label for="pet_type" class="form-label">Gatunek</label>
+            {{ form.pet_type }}
+        </div>
+        <div class="mb-3">
             <label for="pet_name" class="form-label">Imię</label>
             {{ form.pet_name }}
+        </div>
+        <div class="mb-3">
+            <label for="pet_sex" class="form-label">Płeć</label>
+            {{ form.pet_sex }}
         </div>
         <div class="mb-3">
             <label for="pet_image" class="form-label">Zdjęcie</label>
