Sekcja zaginionych - Dodano filtrowanie po plci/miejscowosci/gatunku

--- a/MyProject/templates/base.html
+++ b/MyProject/templates/base.html
@@ -61,7 +61,7 @@
                       <ul class="navbar-nav mx-auto">
                           <li class="nav-item"><a class="nav-link active" href="{% url 'index'%}">Strona Główna</a></li>
                           <li class="nav-item"><a class="nav-link" href="{% url 'about'%}">O nas</a></li>
-                          <li class="nav-item"><a class="nav-link" href="#">Zaginione</a></li>
+                          <li class="nav-item"><a class="nav-link" href="{% url 'lost_pets'%}">Zaginione</a></li>
                           <li class="nav-item"><a class="nav-link" href="{% url 'contact'%}">Kontakt</a></li>
                       </ul>
                       
