--- a/MyProject/templates/pet/edit_profile.html
+++ b/MyProject/templates/pet/edit_profile.html
@@ -40,6 +40,10 @@
             <label for="pet_desc" class="form-label">Zaginął</label>
             {{ form.is_lost }}
         </div>
+        <div class="mb-3">
+            <label for="pet_desc" class="form-label">Województwo</label>
+            {{ form.region }}
+        </div>
         <button type="submit" class="btn btn-primary">Edytuj zwierzę</button>
     </form>
     
