--- a/MyProject/templates/pet/my_pets.html
+++ b/MyProject/templates/pet/my_pets.html
@@ -42,7 +42,7 @@
         {% if item.owner_id == request.user.id%}
             <p>Numer identyfikacyjny zwierzęcia: <a href="{% url 'pet_profile'%}{{ item.id }}">{{ item.pet_num }}</a><br>
                 Imię: {{item.pet_name}} <br> 
-                Województw: {{item.region}} <br>
+                Województwo: {{item.region}} <br>
                 Data dodania: {{item.add_date}} 
                 </p>
                                         
