--- a/MyProject/staticfiles/css/style.css
+++ b/MyProject/staticfiles/css/style.css
@@ -1,3 +1,14 @@
+body {
+    min-height: 100vh ;
+    width: 100%;
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll; 
+}
+body::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+  }
+
 /*Navigation Bar*/
 .navbar {
     width: auto;
@@ -22,9 +33,22 @@
 /*Main*/
 #main {
     margin: auto;
-    width: 70%;
-    height: 100vh;
+    min-height: 75vh;
+    width: 60%;
+    position: static;  
 }
+
+#main #container {
+    
+}
+
+footer {
+    height: 7vh;
+}
+
+
+
+
 
 
 
