--- a/MyProject/templates/index.html
+++ b/MyProject/templates/index.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
-{% load static%}
+
+{% block title %} Strona Główna {% endblock %}
+
+{% comment %} {% load static%}
 {% load bootstrap5 %}
 
 {% block styles %}
@@ -16,7 +19,7 @@
             <div class="input-group-prepend">
                 <div class="input-group-text"><i class="fa fa-paw" style="font-size: 24px;"></i></div>
             </div>
-            <label class="sr-only" for="check_number">Username</label>
+            <label class="sr-only" for="check_number">Chip Number</label>
             <input type="number" class="form-control" id="check_number" name="check_number" placeholder="Wpisz numer identyfikacyjny zwierzęcia">
             <div class="input-group-append">
                 <button type="submit" id="search-button" class="btn btn-dark">
@@ -24,12 +27,5 @@
                 </button>
             </div>
         </div>
-    </form>
-    {% comment %} Testowe menu logowania - należy utworzyć własny model dla użytkowników {% endcomment %}
-    {% comment %} {%if request.user.is_authenticated %}
-        <a href="{%url 'logout'%}">Wyloguj</a>
-    {% else %}
-        <a href="{%url 'login'%}">Zaloguj</a>
-        <a href="{%url 'register'%}">Zarejestruj</a>
-    {% endif %} {% endcomment %}
-{% endblock %}
+    </form> 
+{% endblock %} {% endcomment %}
