--- a/MyProject/templates/pet/add_pet.html
+++ b/MyProject/templates/pet/add_pet.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-{% load static%}
-{% load bootstrap5 %}
+{% comment %} {% load static %}
+{% load bootstrap5 %} {% endcomment %}
 
-{% block styles %}
+{% comment %} {% block styles %}
     <link rel="stylesheet" href='{% static "css/index.css" %}'>
-{%endblock%}
+{%endblock%} {% endcomment %}
 
 {% block title %}Dodaj nowe zwierze{% endblock %}
 
@@ -12,8 +12,8 @@
     <form action="." method=POST enctype="multipart/form-data">
         {% csrf_token %}
         <div class="mb-3">
-            <label for="pet_num" class="form-label">Numer</label>
-            {{ form.pet_num }}
+            <label for="chip_number" class="form-label">Numer</label>
+            {{ form.chip_number }}
         </div>
         <div class="mb-3">
             <label for="pet_type" class="form-label">Gatunek</label>
@@ -24,28 +24,28 @@
             {{ form.pet_name }}
         </div>
         <div class="mb-3">
-            <label for="pet_sex" class="form-label">Płeć</label>
-            {{ form.pet_sex }}
+            <label for="gender" class="form-label">Płeć</label>
+            {{ form.gender }}
         </div>
         <div class="mb-3">
-            <label for="pet_image" class="form-label">Zdjęcie</label>
-            {{ form.pet_image }}
-            <img src="{{form.initial.pet_image.url}}" height="500px" width="500px" alt="pet_image" id="pet_image_preview">
+            <label for="image" class="form-label">Zdjęcie</label>
+            {{ form.image }}
+            <img src="{{form.initial.image.url}}" height="500px" width="500px" alt="image" id="image_preview">
         </div>
         <div class="mb-3">
-            <label for="pet_desc" class="form-label">Opis</label>
-            {{ form.pet_desc }}
+            <label for="desc" class="form-label">Opis</label>
+            {{ form.desc }}
         </div>
         <div class="mb-3">
-            <label for="pet_desc" class="form-label">Zaginął</label>
+            <label for="desc" class="form-label">Zaginął</label>
             {{ form.is_lost }}
         </div>
         <button type="submit" class="btn btn-primary">Zarejestruj zwierze</button>
     </form>
 
     <script>
-        const imgInput = document.querySelector("#id_pet_image")
-        const displayImg = document.querySelector("#pet_image_preview")
+        const imgInput = document.querySelector("#id_image")
+        const displayImg = document.querySelector("#image_preview")
         imgInput.addEventListener('change',
         (event)=>{
             const imgObject = event.target.files[0]
