--- a/MyProject/templates/pet/profile.html
+++ b/MyProject/templates/pet/profile.html
@@ -1,34 +1,35 @@
 {% extends "base.html" %}
-{% load static%}
-{% load bootstrap5 %}
+{% comment %} {% load static %}
+{% load bootstrap5 %} {% endcomment %}
 
-{% block styles %}
+{% comment %} {% block styles %}
     <link rel="stylesheet" href='{% static "css/index.css" %}'>
-{%endblock%}
+{%endblock%} {% endcomment %}
 
 {% block title %}Profil zwierzęcia{% endblock %}
 
 {% block main %}
-    {% for item in all %}
-        <p>{{item.id}}</p>
-        <img src="/media/{{item.pet_image}}" width="200px">
-        {% comment %} Tutaj wyświetlamy dane zwierzęcia, właściciel otrzymuje komunikat "Jesteś właścicielem" {% endcomment %}
-        {% if item.owner_id == request.user.id%}
-           <p>Jesteś właścicielem</p>
-        {% endif %}
-        <p>Numer identyfikacyjny zwierzęcia: {{ item.pet_num }} <br>
-            Gatunek: {{item.pet_type}}</br>
-            Imię: {{item.pet_name}} </br>
-            Płeć:    
-            {%if item.pet_sex == 'Samiec' %}
-                <i class="fa fa-mars"></i> 
-            {% elif item.pet_sex == 'Samica'%}
-                <i class="fa fa-venus"></i> 
-            {% endif %}{{item.pet_sex}}</br>
-            
-            Numer telefonu właściciela: {{item.phone}}</br>
-            Adres e-mail: {{item.email}}</br>
-            Opis: {{item.pet_desc}}</br>
-            Województwo: {{item.region}}</br></p>
-    {% endfor %}
+    {% block container %}
+        {% for item in all %}
+            <img src="/media/{{item.image}}" width="200px">
+            {% comment %} Tutaj wyświetlamy dane zwierzęcia, właściciel otrzymuje komunikat "Jesteś właścicielem" {% endcomment %}
+            {% if item.owner_id == request.user.id%}
+            <p>Jesteś właścicielem</p>
+            {% endif %}
+            <p>Numer identyfikacyjny zwierzęcia: {{ item.chip_number }} <br>
+                Gatunek: {{item.pet_type}}</br>
+                Imię: {{item.pet_name}} </br>
+                Płeć:    
+                {%if item.gender == 'Samiec' %}
+                    <i class="fa fa-mars"></i> 
+                {% elif item.gender == 'Samica'%}
+                    <i class="fa fa-venus"></i> 
+                {% endif %}{{item.gender}}</br>
+                
+                Numer telefonu właściciela: {{item.phone}}</br>
+                Adres e-mail: {{item.email}}</br>
+                Opis: {{item.desc}}</br>
+                Województwo: {{item.region}}</br></p>
+        {% endfor %}
+    {% endblock %}
 {% endblock %}
