Paginator - Poprawiono formularze - Rozpoczeto oczyszczanie kodu

--- a/MyProject/templates/index.html
+++ b/MyProject/templates/index.html
@@ -2,14 +2,7 @@
 
 {% block title %} Strona Główna {% endblock %}
 
-{% comment %} {% load static%}
-{% load bootstrap5 %}
-
-{% block styles %}
-    <link rel="stylesheet" href='{% static "css/index.css" %}'>
-{%endblock%}
-
-{% block title %}Strona Główna{% endblock %}
+{% comment %}
 
 {% block main %}
 
