--- a/MyProject/templates/base.html
+++ b/MyProject/templates/base.html
@@ -36,7 +36,7 @@
                   {% comment %} <i class="fas fa-user" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample" style="font-size: 36px;"></i></a> <p>{{request.user.username}}</p>{% endcomment %}
                   
                   {%if request.user.is_authenticated %}
-                    <div class="dropdown">
+                    <div class="dropdown" style="width='10px'">
                       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fas fa-user" style="font-size: 36px;"></i></a> {{request.user.username}}
                       </button>
@@ -76,7 +76,7 @@
 
           <!-- Site Sections -->
           <div id="main">
-            {% comment %} Tutaj wywołujemy testowa wiadomość przy module logowania{% endcomment %}
+            {% comment %} Tutaj wywołujemy testowa wiadomość przy module logowania {% endcomment %}
               {% if messages %}
                 {% for message in messages %}
                   {%if message.tags == 'success'%}
@@ -93,12 +93,15 @@
                   {%endif%}
                 {% endfor %}
               {% endif %}
+
               {% block main %}
                 <form class="form-inline" action="{% url 'pet_profile'%}" method="POST" class="form-inline" id="search_bar" >
                   {% csrf_token %}
                   <div class="input-group mb-2 mr-sm-2">
                       <div class="input-group-prepend">
-                          <div class="input-group-text"><i class="fa fa-paw" style="font-size: 24px;"></i></div>
+                          <div class="input-group-text">
+                            <i class="fa fa-paw" style="font-size: 24px;"></i>
+                          </div>
                       </div>
                       <label class="sr-only" for="check_number">Chip Number</label>
                       <input type="number" class="form-control" id="check_number" name="check_number" placeholder="Wpisz numer identyfikacyjny zwierzęcia">
