--- a/MyProject/templates/pets/my_pets.html
+++ b/MyProject/templates/pets/my_pets.html
@@ -1,11 +1,4 @@
 {% extends "base.html" %}
-{% comment %} {% load static%}
-{% load bootstrap5 %}
-
-
-{% block styles %}
-    <link rel="stylesheet" href='{% static "css/index.css" %}'>
-{%endblock%} {% endcomment %}
 
 {% block title %}Twoje zwierzęta{% endblock %}
 
@@ -30,6 +23,7 @@
         </div>
         </div>
     </div>
+
     <H1>Lista Twoich zwierząt:</H1>
     {% if pet_page_obj == None %}
         <p>Aktualnie nie masz żadnych zwierząt</p>
@@ -37,16 +31,12 @@
     <a class="btn btn-primary" href="{% url 'add_pet_profile'%}" role="button">Dodaj nowe zwierzę</a>
     <br>
     {% for item in pet_page_obj %}
-        <img src="/media/{{item.image}}" width="200px">
         {% comment %} Tutaj wyświetlamy dane zwierzęcia, właściciel otrzymuje komunikat "Jesteś właścicielem" {% endcomment %}
-        {% if item.owner_id == request.user.id%}
-            <p>Numer identyfikacyjny zwierzęcia: <a href="{% url 'pet_profile'%}{{ item.id }}">{{ item.chip_number }}</a><br>
-                Imię: {{item.pet_name}} <br> 
-                Województwo: {{item.region}} <br>
-                Data dodania: {{item.add_date}} 
-                </p>
-                                        
-            <a class="btn btn-primary" href="{% url 'pet_profile'%}{{item.id}}" role="button">Pokaż profil</a>
+        {% if item.owner_id == request.user.id %}
+
+            {# Wczytujemy szablon do listowania profili zwierząt #}
+            {% include 'template_parts/pet_prof_listing.html' %}
+            
             <a class="btn btn-primary"  href="{% url 'edit_pet_profile' item.id%}" role="button">Edytuj profil</a>
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalCenter" id="{{item.id}}">
@@ -54,7 +44,7 @@
             </button>
             <br>
 
-            <!-- Prosty skrypt do przekazywania id usuwanego zwierzęcia -->
+             {# Prosty skrypt do przekazywania id usuwanego zwierzęcia #}
             <script type="text/javascript">
                 document.getElementById("exampleModalCenter").addEventListener('show.bs.modal', (e) => {
                     console.log("id zwierzęcia:" + e.relatedTarget.id)
@@ -64,14 +54,6 @@
             </script>    
         {% endif %}
     {% endfor %}
-    {% if pet_page_obj.has_previous %}
-            <a href="?page=1">&laquo Pierwsza</a>
-            <a href="?page={{pet_page_obj.previous_page_number}}">&laquo Poprzednia</a>
-    {% endif %}
-    Strona {{pet_page_obj.number}}  z {{pet_page_obj.paginator.num_pages}}
-    
-    {% if pet_page_obj.has_next %}
-        <a href="?page={{pet_page_obj.next_page_number}}">Następna</a>
-        <a href="?page={{pet_page_obj.paginator.num_pages}}">&raquo Ostatnia</a>
-{% endif %}
+    {# Wczytanie szablonu  paginacji stron #}
+    {% include 'template_parts/pagination.html' %}
 {% endblock %}
