--- a/MyProject/staticfiles/css/index.css
+++ b/MyProject/staticfiles/css/index.css
@@ -1,6 +1,7 @@
 #search_bar{
     margin: auto;
     margin-top: 2em;
+    margin-bottom: 2em;
 }
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
