--- a/MyProject/templates/base.html
+++ b/MyProject/templates/base.html
@@ -74,7 +74,7 @@
               </div>
           </nav>
 
-          <!-- Site Sections -->
+          
           <div id="main">
             {% comment %} Tutaj wywołujemy testowa wiadomość przy module logowania {% endcomment %}
               {% if messages %}
@@ -93,122 +93,18 @@
                   {%endif%}
                 {% endfor %}
               {% endif %}
-
+              
+              {# Pasek Wyszukiwania #}
+              {% include 'template_parts/search_bar.html' %}
               {% block main %}
-                <form class="form-inline" action="{% url 'pet_profile'%}" method="POST" class="form-inline" id="search_bar" >
-                  {% csrf_token %}
-                  <div class="input-group mb-2 mr-sm-2">
-                      <div class="input-group-prepend">
-                          <div class="input-group-text">
-                            <i class="fa fa-paw" style="font-size: 24px;"></i>
-                          </div>
-                      </div>
-                      <label class="sr-only" for="check_number">Chip Number</label>
-                      <input type="number" class="form-control" id="check_number" name="check_number" placeholder="Wpisz numer identyfikacyjny zwierzęcia">
-                      <div class="input-group-append">
-                          <button type="submit" id="search-button" class="btn btn-dark">
-                              <i class="fas fa-search"></i>
-                          </button>
-                      </div>
-                  </div>
-                </form>
-                  <div id="container">
-                    
-                    {% block container %}{% endblock %}
-                  </div>
+                    {% block container %} {% endblock %} 
               {% endblock %}
           </div>
-        <!-- Footer -->
-      <footer class="text-center text-lg-start bg-white text-muted  justify-content-lg-between border-top">
 
-        <!-- Section: Links  -->
-        <section class="">
-          <div class="container text-center text-md-start mt-5">
-            <!-- Grid row -->
-            <div class="row mt-3">
-              <!-- Grid column -->
-              <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                <!-- Content -->
-                <h6 class="text-uppercase fw-bold mb-4">
-                  <i class="fas fa-gem me-3 text-secondary"></i>Company name
-                </h6>
-                <p>
-                  Here you can use rows and columns to organize your footer content. Lorem ipsum
-                  dolor sit amet, consectetur adipisicing elit.
-                </p>
-              </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-              <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                <!-- Links -->
-                <h6 class="text-uppercase fw-bold mb-4">
-                  Products
-                </h6>
-                <p>
-                  <a href="#!" class="text-reset">Angular</a>
-                </p>
-                <p>
-                  <a href="#!" class="text-reset">React</a>
-                </p>
-                <p>
-                  <a href="#!" class="text-reset">Vue</a>
-                </p>
-                <p>
-                  <a href="#!" class="text-reset">Laravel</a>
-                </p>
-              </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-              <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                <!-- Links -->
-                <h6 class="text-uppercase fw-bold mb-4">
-                  Przydatne linki
-                </h6>
-                <p>
-                  <a href="https://www.butcherspetcare.com/blog/czipowanie-psa-dlaczego-warto-czipowac-psy/" class="text-reset">Chipowanie</a>
-                </p>
-                <p>
-                  <a href="#!" class="text-reset">Settings</a>
-                </p>
-                <p>
-                  <a href="#!" class="text-reset">Orders</a>
-                </p>
-                <p>
-                  <a href="#!" class="text-reset">Help</a>
-                </p>
-              </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                <!-- Links -->
-                <h6 class="text-uppercase fw-bold mb-4">Kontakt</h6>
-                <p>
-                  <i class="fas fa-home me-3 text-secondary"></i> <a class="text-reset " href="https://wfa.uni.wroc.pl/pl/"> Uniwersytet Wrocławski</a>
-                </p>
-                <p>
-                  <i class="fas fa-envelope me-3 text-secondary"></i><a class="text-reset" href="mailto:315269@uwr.edu.pl" > Napisz do nas</a>
-                </p>
-              </div>
-              <!-- Grid column -->
-            </div>
-            <!-- Grid row -->
-          </div>
-        </section>
-        <!-- Section: Links  -->
-
-        <!-- Copyright -->
-        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
-          &copy <script>document.write(new Date().getFullYear())</script>
-          <a class="text-reset fw-bold" href="https://github.com/Cielako"> Cielako</a> 
-        </div>
-        <!-- Copyright -->
-      </footer>
-      <!-- Footer -->
+          {# Stopka #}
+          {% include 'template_parts/footer.html' %}
+      
           {% comment %} <footer class="bg-light text-center text-lg-start sticky-bottom">
-              <!-- Copyright -->
               <div class="text-center p-3">
               &copy <script>document.write(new Date().getFullYear())</script> Copyright: <a href="https://github.com/Cielako">Cielako</a> 
               </div>
