--- a/MyProject/templates/template_parts/pagination.html
+++ b/MyProject/templates/template_parts/pagination.html
@@ -1,12 +1,11 @@
 {# paginator dla stron #}
 {% load pets_tags %}
 
-
-<nav aria-label="Page pet list">
+<nav id="pagination" aria-label="Page pet list">
     <ul class="pagination justify-content-center">
         {% if pet_page_obj.has_previous %}
             <li class="page-item ">
-                <a class="page-link" href="{% filter_url 1 'page' request.GET.urlencode %}">Początek</a>
+                <a class="page-link" href="{% filter_url 1 'page' request.GET.urlencode %}">Pierwsza</a>
             </li>
             <li class="page-item ">
                 <a class="page-link" href="{% filter_url pet_page_obj.previous_page_number 'page' request.GET.urlencode %}">&laquo</a>
@@ -26,7 +25,7 @@
                 <a class="page-link" href="{% filter_url pet_page_obj.next_page_number 'page' request.GET.urlencode %}">&raquo</a>
             </li>
             <li class="page-item ">
-                <a class="page-link" href="{% filter_url pet_page_obj.paginator.num_pages 'page' request.GET.urlencode %}">Koniec</a>
+                <a class="page-link" href="{% filter_url pet_page_obj.paginator.num_pages 'page' request.GET.urlencode %}">Ostatnia</a>
             </li>
         {% endif %}
     </ul>
