--- a/MyProject/templates/accounts/login.html
+++ b/MyProject/templates/accounts/login.html
@@ -1,16 +1,25 @@
 {% extends "base.html" %}
 
 {% block main %} 
-    <form action="" method=POST>
-        {% csrf_token %}
-        <div class="mb-3">
-        <label for="login" class="form-label">Nazwa Użytkownika lub Adres e-mail</label>
-        <input type="text" class="form-control" name="username" aria-describedby="loginHelp">
-        </div>
-        <div class="mb-3">
-        <label for="password" class="form-label">Hasło</label>
-        <input type="password" class="form-control" name="password">
-        </div>
-        <button type="submit" class="btn btn-primary">Zaloguj</button>
-    </form>
+    <div class="cred-form rounded-3 ">
+        <form action="" method=POST>
+            {% csrf_token %}
+            <label for="inputLogin" class="form-label"> <strong>Nazwa użytkownika lub e-mail:</strong></label>
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
+                <input id="inputLogin"type="text" class="form-control" name="username" aria-describedby="loginHelp" placeholder="np. test123 | test123@gmail.com">
+            </div>
+            <label for="inputPassword" class="form-label"><strong>Hasło: </strong></label>
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1"><i class="fas fa-unlock"></i></span>
+                <input id="inputPassword"type="password" class="form-control" name="password" placeholder="******">
+            </div>
+            <div class="d-flex justify-content-center" role="group" aria-label="Basic example">
+                <button type="submit" class="btn btn-primary rounded-pill">Zaloguj się</button>
+            </div>
+            <div class="text-center">
+                <p>Nie masz konta? <a href="{%url 'register'%}">Zarejestruj się</a></p>
+            </div>
+        </form>
+    </div>
 {% endblock %}
