--- a/MyProject/templates/index.html
+++ b/MyProject/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block main %}
 
-    <form class="form-inline" action="pets/profile/" method="POST" class="form-inline" id="search_bar" >
+    <form class="form-inline" action="pets/profile/" method="POST" class="form-inline" id="search-bar" >
         {% csrf_token %}
         <div class="input-group mb-2 mr-sm-2">
             <div class="input-group-prepend">
