--- a/MyProject/templates/pets/lost_pets.html
+++ b/MyProject/templates/pets/lost_pets.html
@@ -22,12 +22,16 @@
         </form>
 
     <H1>Lista zaginionych zwierząt:</H1>
-    <div id="pets_container">
+    <div id="pets-container">
         {% for item in pet_page_obj %}
             {# Wczytujemy szablon do listowania profili zwierząt #}
             {% block container %}
-                <section class="pet_list p-2"  onclick="javascript:window.location.href='{% url 'pet_profile'%}{{item.id}}'">
+                <section class="pet-list p-2"  onclick="javascript:window.location.href='{% url 'pet_profile'%}{{item.id}}'">
                     {% include 'template_parts/pet_prof_listing.html' %}
+
+                    <div class="d-flex justify-content-center" role="group" aria-label="Basic example">
+                        <a class="btn btn-primary" href="{% url 'pet_profile'%}{{item.id}}" role="button" ><i class="fas fa-eye"></i> Pokaż</a>
+                    </div>
                     <br>
                 </section>
             {% endblock %}
