--- a/MyProject/templates/pets/my_pets.html
+++ b/MyProject/templates/pets/my_pets.html
@@ -30,16 +30,18 @@
     {% endif %}
     <a class="btn add btn-primary" href="{% url 'add_pet_profile'%}" role="button"><i class="fas fa-plus-circle"> </i> Dodaj nowe zwierzę</a>
     <br>
-    <div id="pets_container">
+    <div id="pets-container">
         {% for item in pet_page_obj %}
             {# Zwracamy dane jeśli użytkownik to właściciel #}
             {% if item.owner_id == request.user.id %}
 
                 {% block container %}
                     {# Kontener #}
-                    <section class="pet_list p-2" onclick="javascript:window.location.href='{% url 'pet_profile'%}{{item.id}}'">
+                    <section class="pet-list p-2" onclick="javascript:window.location.href='{% url 'pet_profile'%}{{item.id}}'">
                         {# Wczytujemy szablon do listowania profili zwierząt #}
                         {% include 'template_parts/pet_prof_listing.html' %}
+
+                        <a class="btn btn-primary" href="{% url 'pet_profile'%}{{item.id}}" role="button" ><i class="fas fa-eye"></i> Pokaż</a>
                         <a class="btn btn-primary"  href="{% url 'edit_pet_profile' item.id%}" role="button"><i class="far fa-edit"></i> Edytuj</a>
                         <!-- Button trigger modal -->
                         <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModalCenter" id="{{item.id}}">
