--- a/MyProject/templates/base.html
+++ b/MyProject/templates/base.html
@@ -42,7 +42,7 @@
                         <i class="fas fa-user" style="font-size: 36px;"></i></a> {{request.user.username}}
                       </button>
                       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="{%url 'profile'%}">Profil użytkownika</a>
+                        <a class="dropdown-item" href="{%url 'profile'%}">Pokaż profil</a>
                         <a class="dropdown-item" href="{%url 'my_pets'%}">Twoje zwierzęta</a>
                         <a class="dropdown-item" href="{%url 'logout'%}">Wyloguj</a>
                       </div>
