--- a/MyProject/static/css/style.css
+++ b/MyProject/static/css/style.css
@@ -137,6 +137,32 @@ nav#pagination {
     margin-bottom: 1em;
 }
 
+/*----------User Profile-----------*/
+section#user-profile{
+    display: flex;
+    margin: auto;
+}
+
+#u-profile-left{
+    padding: 1em;
+    margin-left: 0px;
+    background-color: aqua;
+}
+
+#u-profile-right{
+    padding: 1em;
+    margin-right: 0px;
+    background-color: rgb(248, 248, 248);
+}
+
+.text-muted {
+    color: #9098a0 
+}
+
+.f-w-600 {
+    font-weight: 600;
+}
+
 /*----------Mobile Version-----------*/
 @media only screen and (max-width: 900px){ 
 
@@ -169,6 +195,9 @@ nav#pagination {
 
     .cred-form {
         width: auto;
+    }
+    section#user-profile{
+        flex-direction: column;
     }
 }
 
