--- a/MyProject/templates/pets/my_pets.html
+++ b/MyProject/templates/pets/my_pets.html
@@ -4,7 +4,7 @@
 
 {% block main %}
     <!-- Modal Delete -->
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal fade" id="petDeleteModalCenter" tabindex="-1" role="dialog" aria-labelledby="petDeleteModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -37,16 +37,17 @@
 
                 {% block container %}
                     {# Kontener #}
-                    <section class="pet-list p-2" onclick="javascript:window.location.href='{% url 'pet_profile'%}{{item.id}}'">
+                    {% comment %} onclick="javascript:window.location.href='{% url 'pet_profile'%}{{item.id}}'" {% endcomment %}
+                    <section class="pet-list p-2">
                         {# Wczytujemy szablon do listowania profili zwierząt #}
                         {% include 'template_parts/pet_prof_listing.html' %}
 
                         <a class="btn btn-primary" href="{% url 'pet_profile'%}{{item.id}}" role="button" ><i class="fas fa-eye"></i> Pokaż</a>
                         <a class="btn btn-primary"  href="{% url 'edit_pet_profile' item.id%}" role="button"><i class="far fa-edit"></i> Edytuj</a>
                         <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModalCenter" id="{{item.id}}">
+                        <a class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#petDeleteModalCenter" id="{{item.id}}">
                             <i class="far fa-trash-alt"></i> Usuń 
-                        </button>
+                        </a>
                         <br>
                     </section>
                 {% endblock %}
@@ -55,7 +56,7 @@
         {% endfor %}
     </div>
     <script type="text/javascript">
-        document.getElementById("exampleModalCenter").addEventListener('show.bs.modal', (e) => {
+        document.getElementById("petDeleteModalCenter").addEventListener('show.bs.modal', (e) => {
             console.log("id zwierzęcia:" + e.relatedTarget.id)
             var link = "{% url 'del_pet_profile'%}?pet_id=" +  e.relatedTarget.id;
             document.getElementById("delete").setAttribute("href", link);
